# AdventOfCode

./: .gitignore  CMakeLists.txt  README.md
include/: aoc.h
source/: 2015-01.c  2015-02.c  aoc.c  template.c
source/2015/: 2015-01.c  2015-02.c
